--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Site Heading</h1>
+        <h1>Site Header</h1>
       </header>
       <div id="content-wrap">
         <section id="home-featured-items">
